--- a/src/app/parts/transfer-panel/transfer-panel.component.scss
+++ b/src/app/parts/transfer-panel/transfer-panel.component.scss
@@ -117,7 +117,7 @@
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
-          max-width: 62vw;
+          max-width: 218px;
         }
 
       }
@@ -132,7 +132,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 62vw;
+        max-width: 218px;
       }
 
       @media screen and (min-width: 429px) and (max-width: 1024px) {
