--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -687,6 +687,7 @@ $color-grn01: #81c5b4;
     $height: 30px;
     $radius: 15px;
     $color: #707070;
+    caret-color: transparent;
 
     line-height: $height;
     letter-spacing: 0;
