--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -44,7 +44,7 @@
               </ng-container>
             </div>
           </div>
-          <div class="title">プラン名</div>
+          <div class="title">{{"TravelBookmark"|translate}}</div>
         </div>
       </div>
 
@@ -362,7 +362,7 @@
         <!-- <div class='rt'>
           <div class="timerequired">{{ row.timeRequiredDisp  }}</div>
         </div> -->
-        <div class="title">プラン名</div>
+        <div class="title">{{"TravelBookmark"|translate}}</div>
       </mat-card-header>
     </mat-card>
 
