--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -428,6 +428,7 @@ form {
         position:absolute;
         top: 2px;
         left: 16px;
+        color:$color-gld03;
       }
     }
   }
@@ -1062,10 +1063,10 @@ form {
       }
     }
     .title{
-    font-size: 11px;
-        position:absolute;
-        top: 2px;
-        left: 16px;
+      font-size: 11px;
+      position:absolute;
+      top: 2px;
+      left: 16px;
     }
   }
 
