--- a/src/app/pages/planspot/planspot.component.scss
+++ b/src/app/pages/planspot/planspot.component.scss
@@ -97,7 +97,7 @@
     &.right{
       flex-basis: 22%;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       .wrap{
         width: 90px;
         height: 90px;
