--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -44,7 +44,7 @@
               </ng-container>
             </div>
           </div>
-          <div class="title">{{"TravelBookmark"|translate}}</div>
+          <div class="title">{{ "TravelBookmark" | translate }}</div>
         </div>
       </div>
 
@@ -362,7 +362,7 @@
         <!-- <div class='rt'>
           <div class="timerequired">{{ row.timeRequiredDisp  }}</div>
         </div> -->
-        <div class="title">{{"TravelBookmark"|translate}}</div>
+        <div class="title">{{ "TravelBookmark" | translate }}</div>
       </mat-card-header>
     </mat-card>
 
@@ -598,8 +598,8 @@
       </ng-container>
     </div>
     <div class="spacer">
-        <img src="../../../assets/img/allow_down_slv.svg" alt="" />
-      </div>
+      <img src="../../../assets/img/allow_down_slv.svg" alt="" />
+    </div>
     <div class="endSpot" *ngIf="this.row.endPlanSpot">
       <div class="lt">
         <span class="mark"></span>
@@ -623,19 +623,21 @@
     </div>
   </div>
   <div class="footer">
-    <div class="transport mt8" style="width: 100%;">
+    <div class="transport mt8" style="width: 100%">
       <div class="lt">
-        <span class="label">{{ "TravelRoute" | translate }}</span>
-        <div class="switchTran" [ngClass]="{ en: lang === 'en' }">
-          <input
-            type="checkbox"
-            id="switch-tran"
-            (click)="onClickTran()"
-            [checked]="!row?.isCar"
-            [disabled]="!row || !isEdit"
-          />
-          <label for="switch-tran"><span></span></label>
-          <div id="swImg"></div>
+        <div>
+          <span class="label">{{ "TravelRoute" | translate }}</span>
+          <div class="switchTran" [ngClass]="{ en: lang === 'en' }">
+            <input
+              type="checkbox"
+              id="switch-tran"
+              (click)="onClickTran()"
+              [checked]="!row?.isCar"
+              [disabled]="!row || !isEdit"
+            />
+            <label for="switch-tran"><span></span></label>
+            <div id="swImg"></div>
+          </div>
         </div>
         <mat-slide-toggle
           [checked]="row.isBus"
