--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -58,12 +58,9 @@ form {
 
   .lt {
     display: flex;
-    align-items:baseline;
-    //background: #f8f7f7;
-    //border-radius: 20px;
-    padding: 0 5px 0 15px;
-    //height: 40px;
-    flex-direction: column;
+    align-items: flex-end;
+    padding: 0 5px 0 8px;
+    flex-direction: row;
 
     span.label {
       margin-right: 15px;
@@ -71,6 +68,7 @@ form {
       font-size: 11px;
           caret-color: transparent;
     }
+
   }
 
   .rt {
@@ -78,10 +76,10 @@ form {
     align-items:baseline;
         //background: #f8f7f7;
     //border-radius: 20px;
-    padding: 0 15px 0 5px;
+    padding: 0 8px 0 5px;
     //height: 40px;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
     span.label {
       font-size: 11px;
