--- a/src/app/pages/offcial/guide/guide.component.scss
+++ b/src/app/pages/offcial/guide/guide.component.scss
@@ -16,20 +16,23 @@
   }
 
   #load__mask {
-    background-color: #5f6c68;
-    display: block;
+    //background-color: transparent;
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 1;
     height: 100vh;
     width: 100%;
+    justify-content: end;
+    align-items: flex-end;
 
     video{
       display: block;
-      width: 100vw;
-      height: 100vh;
+      width: 50vw;
+      height: 50vh;
       //object-fit: cover;
+      position: relative;
     }
 
     &.reval {
@@ -79,7 +82,7 @@
 
     .closeVideo{
       position: absolute;
-      top: 16px;
+      bottom: calc(50vh - 100px);
       right: 16px;
       width: 40px;
       height: 40px;
@@ -90,6 +93,7 @@
         width: 100%;
         height: 100%;
       }
+
     }
   }
 
